--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-camera": "~7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.4.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-drawer": "^2.3.3",
+    "react-navigation-stack": "^1.10.3",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
