--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
